--- a/index.html
+++ b/index.html
@@ -745,20 +745,20 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Início</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre Nós</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Serviços</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Portólio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Equipe</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contato</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/home">Início</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about">Sobre Nós</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Serviços</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/portfolios">Portólio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/team">Equipe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/contact">Contato</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Socials</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Instagram</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Linkedin</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.instagram.com/dev.vortex/" target="_blank" >Instagram</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/company/103640502/admin/feed/posts/" target="_blank">Linkedin</a></li>
             </ul>
           </div>
 
