--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.html"><img src="/assets/img/vortex development.png" width="180" height="50"></a>
+      <a href="index.html"><img src="/assets/img/vortex-development.png" width="180" height="50"></a>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
-            <img src="/assets/img/vortex png azul.png" width="520" class="img-fluid" alt="">
+            <img src="/assets/img/vortex-azul.png" width="520" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Sobre Nós</h3>
