--- a/portfolio-portfolio.html
+++ b/portfolio-portfolio.html
@@ -41,7 +41,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.html"><img src="/assets/img/Vortex Development.png" width="180" height="50"></a>
+      <a href="index.html"><img src="/assets/img/vortex-development.png" width="180" height="50"></a>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
