--- a/portfolio-portfolio.html
+++ b/portfolio-portfolio.html
@@ -27,13 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Techie
-  * Template URL: https://bootstrapmade.com/techie-free-skin-bootstrap-3/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -41,9 +34,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.html"><img src="/assets/img/vortex-development.png" width="180" height="50"></a>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="#hero" class="logo"><img src="assets/img/vortex-development.png" alt="Logotipo" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -146,7 +137,7 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="/home">Início</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/hero">Início</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/about">Sobre Nós</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/services">Serviços</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/portfolios">Portólio</a></li>
