--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
-            <img src="/assets/img/vortex-azul.png" class="img-fluid" alt="">
+            <img src="assets/img/vortex-azul.png" alt="Logotipo" class="img-fluid">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Sobre Nós</h3>
