--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/vitor.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/vitor.JPG" alt="Vitor" class="img-fluid">
                 <div class="social">
                   <a target="_blank" href="https://links.pereiravt.com/" title="Portfólio - Vitor Pereira"><i class="bi bi-link-45deg"></i></a>
                   <a target="_blank" href="https://github.com/Vtzao" title="Github - Vtzao"><i class="bi bi-github"></i></a>
