--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vortex Development - Seu site é o rosto online do seu negócio!</title>
-  <meta content="Seu site é o rosto online do seu negócio! Desenvolvimento de websites otimizados, modernos, personalizados e que se encaixa em qualquer dispositivo." name="description">
-  <meta content="" name="keywords">
+  <title>Vortex Development - Desenvolvimento de Websites Otimizados</title>
+  <meta name="description" content="Seu site é o rosto online do seu negócio! Desenvolvimento de websites otimizados, modernos, personalizados e que se encaixam em qualquer dispositivo.">
+  <meta name="keywords" content="desenvolvimento web, websites otimizados, sites modernos, sites personalizados, sites responsivos">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vortexdevteam.com/">
+  <meta property="og:title" content="Vortex Development - Desenvolvimento de Websites Otimizados">
+  <meta property="og:description" content="Seu site é o rosto online do seu negócio! Desenvolvimento de websites otimizados, modernos, personalizados e que se encaixam em qualquer dispositivo.">
+  <meta property="og:image" content="assets/img/vortex-azul.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vortexdevteam.com/">
+  <meta property="twitter:title" content="Vortex Development - Desenvolvimento de Websites Otimizados">
+  <meta property="twitter:description" content="Seu site é o rosto online do seu negócio! Desenvolvimento de websites otimizados, modernos, personalizados e que se encaixam em qualquer dispositivo.">
+  <meta property="twitter:image" content="assets/img/vortex-azul.png">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,7 +40,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -34,7 +47,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo"><img src="assets/img/vortex-development.png" alt="Logotipo" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="assets/img/vortex-development.png" alt="Logotipo Vortex Development" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -63,7 +76,7 @@
           <div><a href="#about" class="btn-get-started scrollto">Sobre Nós</a></div>
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
-          <img src="assets/img/PC.png" class="img-fluid animated" alt="">
+          <img src="assets/img/PC.png" class="img-fluid animated" alt="Desenvolvimento Web">
         </div>
       </div>
     </div>
@@ -78,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
-            <img src="assets/img/vortex-azul.png" alt="Logotipo" class="img-fluid">
+            <img src="assets/img/vortex-azul.png" alt="Logotipo Vortex Development" class="img-fluid">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Sobre Nós</h3>
@@ -317,7 +330,7 @@
                   Excelente serviço prestado pela Vortex, preço justo, atendimento rápido e sempre explicaram cada detalhe do projeto com muita sinceridade.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/file.enc" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/file.enc" class="testimonial-img" alt="Cliente">
                 <h3>Raynon Alexandre</h3>
                 <h4>Autônomo</h4>
               </div>
@@ -330,7 +343,7 @@
                   Eu tive uma excelente experiência com o site da Domu Cabinets. Ele não só atendeu às minhas expectativas, mas também superou as dos meus clientes. A navegação é intuitiva e as informações são claras e detalhadas, facilitando a escolha dos produtos. Recomendo fortemente!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/file (1).enc" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/file (1).enc" class="testimonial-img" alt="Cliente">
                 <h3>Felipe Resstel</h3>
                 <h4>CEO DomuCabinets</h4>
               </div>
@@ -356,7 +369,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/site portfolio 1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/site portfolio 1.png" class="img-fluid" alt="Exemplo Site">
               <div class="portfolio-info">
                 <h4>Portfólios</h4>
                 <p>Website</p>
@@ -370,13 +383,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Print 1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Print 1.png" class="img-fluid" alt="Exemplo Site">
               <div class="portfolio-info">
                 <h4>Domu Cabinets</h4>
                 <p>Web Software</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Print 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Print 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3" ><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="Mais Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -384,7 +397,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Onepage.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Onepage.png" class="img-fluid" alt="Exemplo Site">
               <div class="portfolio-info">
                 <h4>OnePage</h4>
                 <p>Website</p>
@@ -437,7 +450,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/guilherme.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/team/guilherme.jpeg" class="img-fluid" alt="Guilherme">
                 <div class="social">
                   <a href="https://github.com/guiguizan" title="Github" target="_blank"><i class="bi bi-github"></i></a>
                   <a href="https://www.linkedin.com/in/guilherme-zanchettin-1a56b2158/" target="_blank" title="Linkedin"><i class="bi bi-linkedin"></i></a>
@@ -724,7 +737,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>VORTEX</h3>
+            <a href="index.html" class="logo"><img src="assets/img/vortex-development.png" alt="Logotipo" class="img-fluid"></a>
             <p>
               Curitiba, PR<br>
               Brasil <br><br>
