--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Transformando Ideias em Soluções Digitais</h1>
           <h2>Desenvolvimento Web de Alta Qualidade para Impulsionar seu Negócio</h2>
-          <div><a href="#about" class="btn-get-started scrollto">Sobre Nós</a></div>
+          <div><a href="#contact" class="btn-get-started scrollto">Solicitar Orçamento</a></div>
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
           <img src="assets/img/PC.png" class="img-fluid animated" alt="Desenvolvimento Web">
@@ -775,19 +775,19 @@
       <div class="copyright-wrap d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>Vortex</span></strong>. Todos os Direitos Reservados.
+            &copy; Copyright <strong><span>Vortex Development</span></strong>. Todos os Direitos Reservados.
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/techie-free-skin-bootstrap-3/ -->
-            Designed by <a href="#">Vortex Development</a>
+            Desenvolvido por <a href="#">Vortex Development</a>
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <a href="https://www.instagram.com/dev.vortex/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/company/vortexdevelopment/about/?viewAsMember=true" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/dev.vortex/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/vortexdevelopment/about/?viewAsMember=true" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
