--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
               <div class="member-img">
                 <img src="assets/img/team/vitor.JPG" alt="Vitor" class="img-fluid">
                 <div class="social">
-                  <a target="_blank" href="https://links.pereiravt.com/" title="Portfólio - Vitor Pereira"><i class="bi bi-link-45deg"></i></a>
+                  <a target="_blank" href="https://pereiravt.com/" title="Portfólio - Vitor Pereira"><i class="bi bi-link-45deg"></i></a>
                   <a target="_blank" href="https://github.com/Vtzao" title="Github - Vtzao"><i class="bi bi-github"></i></a>
                   <a target="_blank" href="https://www.instagram.com/pereira_vt/" title="Instagram"><i class="bi bi-instagram"></i></a>
                   <a target="_blank" href="https://www.linkedin.com/in/vitor-pereira-co/" title="Linkedin"><i class="bi bi-linkedin"></i></a>
