--- a/index.html
+++ b/index.html
@@ -623,13 +623,13 @@
 
         <li data-aos="fade-up" data-aos-delay="200">
           <i class="bx bx-help-circle icon-help"></i>
-          <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Qual é a diferença entre os planos One Page e Business?
+          <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Como o site é desenvolvido?
             <i class="bx bx-chevron-down icon-show"></i>
             <i class="bx bx-chevron-up icon-close"></i>
           </a>
           <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
             <p>
-              O plano One Page é ideal para quem precisa de um site simples, com uma única página que abrange todas as informações essenciais. Já o plano Business é mais completo, oferecendo várias páginas, como Home, Sobre, Serviços e Contato, além de integrações adicionais e melhor otimização para SEO.
+              Nosso processo de desenvolvimento de sites na Vortex Development é altamente personalizado para atender às necessidades únicas de cada cliente. Começamos com uma reunião inicial para entender seus objetivos, público-alvo e preferências de design. Em seguida, criamos um layout visual e estrutural que reflita a identidade da sua marca. Utilizamos as tecnologias mais modernas, como Angular, HTML5, CSS3, e JavaScript, para construir um site que seja responsivo, rápido e seguro. Todo o processo é colaborativo, mantendo você informado e envolvido em cada etapa, desde o design inicial até o lançamento final.
             </p>
           </div>
         </li>
@@ -642,7 +642,7 @@
           </a>
           <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
             <p>
-              Sim, oferecemos serviços de suporte contínuo que incluem atualizações de conteúdo, manutenção técnica e melhorias conforme necessário. Também podemos treinar sua equipe para fazer atualizações básicas.
+              Sim, oferecemos serviços de suporte contínuo que incluem atualizações de conteúdo, manutenção técnica e melhorias conforme necessário. Também podemos fazer modificações avulsas caso não tenha um plano de manutenção.
             </p>
           </div>
         </li>
@@ -662,13 +662,13 @@
 
         <li data-aos="fade-up" data-aos-delay="500">
           <i class="bx bx-help-circle icon-help"></i>
-          <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Vocês oferecem hospedagem e domínio?
+          <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">A Vortex forcene uma hospedagem e domínio?
             <i class="bx bx-chevron-down icon-show"></i>
             <i class="bx bx-chevron-up icon-close"></i>
           </a>
           <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
             <p>
-              Não oferecemos serviços de venda de hospedagem ou domínio. No entanto, podemos orientar você sobre como e onde comprar esses serviços. Enviamos o arquivo do projeto para você e, caso precise de ajuda para configurar a hospedagem e deixar o site ativo, cobramos uma taxa básica por esse serviço.
+              Não oferecemos serviços de venda de hospedagem ou domínio. No entanto, podemos orientar você sobre como e onde comprar esses serviços. Enviamos o arquivo do projeto para você e, caso precise de ajuda para configurar a hospedagem e deixar o site ativo, cobramos uma taxa simbólica por esse serviço.
             </p>
           </div>
         </li>
@@ -681,7 +681,7 @@
           </a>
           <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
             <p>
-              Nosso suporte técnico inclui correções de bugs, atualizações de segurança, otimização de desempenho e assistência para quaisquer problemas técnicos que possam surgir. O nível de suporte varia de acordo com o plano escolhido.
+              Nosso suporte técnico inclui correções de bugs, atualizações de segurança, otimização de desempenho e assistência para qualquer modificação técnica que possa surgir, como por exemplo: mudança de endereço, telefone, imagens, etc.
             </p>
           </div>
         </li>
@@ -831,6 +831,29 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Vortex Development",
+      "url": "https://vortexdevteam.com",
+      "logo": "https://vortexdevteam.com/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+55-41-98870-8878",
+        "contactType": "Serviço ao Cliente",
+        "areaServed": "Brasil",
+        "availableLanguage": "Portuguese"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Curitiba",
+        "addressRegion": "PR",
+        "addressCountry": "Brasil"
+      }
+    }
+    </script>
+
 
 </body>
 
