--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <li><a class="nav-link scrollto " href="#portfolio">Portfólio</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipe</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
-          <li><a class="getstarted scrollto" href="#about">Pedir um Site</a></li>
+          <li><a class="getstarted scrollto" href="https://wa.me/+5541988708878" target="_blank">Chamar no Whatsapp</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -94,6 +94,7 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+          <a href="index.html" class="logo"><img src="assets/img/vortex-development.png" alt="Logotipo Vortex Development" class="img-fluid"></a>
           <h1>Transformando Ideias em Soluções Digitais</h1>
           <h2>Desenvolvimento Web de Alta Qualidade para Impulsionar seu Negócio</h2>
           <div><a href="#contact" class="btn-get-started scrollto">Solicitar Orçamento</a></div>
@@ -119,7 +120,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Sobre Nós</h3>
             <p>
-              Na Vortex Development, unimos nossas habilidades técnicas e criativas para oferecer soluções web inovadoras e de alta qualidade.
+              A Vortex Development é o resultado da parceria entre três amigos apaixonados por tecnologia e inovação. Nosso foco está no desenvolvimento de websoftwares e websites personalizados, sempre buscando entregar soluções modernas e eficientes para nossos clientes. Combinamos criatividade, experiência e dedicação para transformar ideias em projetos digitais de sucesso, criando ferramentas que agregam valor e simplificam processos. Juntos, estamos construindo um futuro onde a tecnologia é acessível, prática e impactante!
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Transformamos suas ideias em soluções digitais eficazes.</li>
@@ -463,7 +464,7 @@
               </div>
               <div class="member-info">
                 <h4>Vitor Pereira</h4>
-                <span>Desenvolvedor Front End e Coordenador de Projetos</span>
+                <span>Desenvolvedor FrontEnd e Líder de Projetos</span>
                 <p>Vitor é o responsável pelo desenvolvimento Front End, ele garante que todos os projetos sejam concluídos com a mais alta qualidade e eficiência, liderando a equipe com sua visão estratégica e habilidades técnicas.
                 </p>
               </div>
@@ -481,8 +482,25 @@
               </div>
               <div class="member-info">
                 <h4>Guilherme Zanchettin</h4>
-                <span>Desenvolvedor Back End e Co-idealizador de Projetos</span>
+                <span>Desenvolvedor BackEnd e Co-idealizador de Projetos</span>
                 <p>Guilherme é o especialista em desenvolvimento back end, contribuindo com soluções técnicas robustas e inovadoras. Garantindo que todas as funcionalidades funcionem perfeitamente e atendam às necessidades dos clientes.</p>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/team/douglas.jpg" class="img-fluid" alt="Guilherme">
+                <div class="social">
+                  <a href="https://github.com/guiguizan" title="Github" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/guilherme-zanchettin-1a56b2158/" target="_blank" title="Linkedin"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Douglas Souza</h4>
+                <span>Desenvolvedor BackEnd e CloudComputing</span>
+                <p>Douglas é o nosso especialista em cloud computing e banco de dados, trazendo soluções modernas para armazenamento, gerenciamento e escalabilidade, sempre garantindo a melhor performance para nossos clientes.</p>
               </div>
             </div>
           </div><!-- End Team Member -->
